mqtt configurator working