@@ -1,19 +1,27 @@
 package com.github.skywa04885.dxprotoproxy.config.mqtt;
 
 import com.github.skywa04885.dxprotoproxy.DXDomUtils;
+import com.github.skywa04885.dxprotoproxy.IDXTreeItem;
+import com.github.skywa04885.dxprotoproxy.configurator.ConfiguratorImageCache;
+import javafx.beans.binding.Bindings;
+import javafx.beans.binding.StringBinding;
 import javafx.beans.property.SimpleIntegerProperty;
 import javafx.beans.property.SimpleListProperty;
 import javafx.beans.property.SimpleObjectProperty;
 import javafx.beans.property.SimpleStringProperty;
+import javafx.beans.value.ObservableValue;
 import javafx.collections.FXCollections;
+import javafx.scene.Node;
+import javafx.scene.image.ImageView;
 import org.jetbrains.annotations.NotNull;
 import org.jetbrains.annotations.Nullable;
 import org.w3c.dom.Document;
 import org.w3c.dom.Element;
 
 import java.util.List;
+import java.util.stream.Collectors;
 
-public class MQTTClientConfig {
+public class MQTTClientConfig implements IDXTreeItem {
     /**
      * Static constants.
      */
@@ -79,12 +87,30 @@ public class MQTTClientConfig {
     }
 
     /**
+     * Sets the client hostname.
+     *
+     * @param clientHostname the new client hostname.
+     */
+    public void setClientHostname(@NotNull String clientHostname) {
+        clientHostnameProperty.set(clientHostname);
+    }
+
+    /**
      * Gets the client port.
      *
      * @return the client port.
      */
-    public @NotNull Integer clientPort() {
+    public int clientPort() {
         return clientPortProperty.get();
+    }
+
+    /**
+     * Sets the client port.
+     *
+     * @param clientPort the new client port.
+     */
+    public void setClientPort(int clientPort) {
+        clientPortProperty.set(clientPort);
     }
 
     /**
@@ -97,12 +123,30 @@ public class MQTTClientConfig {
     }
 
     /**
+     * Sets the broker hostname.
+     *
+     * @param brokerHostname the new broker hostname.
+     */
+    public void setBrokerHostname(@NotNull String brokerHostname) {
+        brokerHostnameProperty.set(brokerHostname);
+    }
+
+    /**
      * Gets the broker port.
      *
      * @return the broker port.
      */
-    public @NotNull Integer brokerPort() {
+    public int brokerPort() {
         return brokerPortProperty.get();
+    }
+
+    /**
+     * Sets the broker port.
+     *
+     * @param brokerPort the new broker port.
+     */
+    public void setBrokerPort(int brokerPort) {
+        brokerPortProperty.set(brokerPort);
     }
 
     /**
@@ -115,6 +159,15 @@ public class MQTTClientConfig {
     }
 
     /**
+     * Sets the username.
+     *
+     * @param username the new username.
+     */
+    public void setUsername(@Nullable String username) {
+        usernameProperty.set(username);
+    }
+
+    /**
      * Gets the password.
      *
      * @return the password.
@@ -124,12 +177,30 @@ public class MQTTClientConfig {
     }
 
     /**
+     * Sets the password.
+     *
+     * @param password the new password.
+     */
+    public void setPassword(@Nullable String password) {
+        passwordProperty.set(password);
+    }
+
+    /**
      * Gets the client identifier.
      *
      * @return the client identifier.
      */
     public @Nullable String clientIdentifier() {
         return clientIdentifierProperty.get();
+    }
+
+    /**
+     * Sets the client identifier.
+     *
+     * @param clientIdentifier the new client identifier.
+     */
+    public void setClientIdentifier(@Nullable String clientIdentifier) {
+        clientIdentifierProperty.set(clientIdentifier);
     }
 
     /**
@@ -148,6 +219,96 @@ public class MQTTClientConfig {
      */
     public void setParent(@Nullable MQTTClientsConfig parent) {
         parentProperty.set(parent);
+    }
+
+    /**
+     * Gets the client hostname property.
+     *
+     * @return the client hostname property.
+     */
+    public @NotNull SimpleStringProperty clientHostnameProperty() {
+        return clientHostnameProperty;
+    }
+
+    /**
+     * Gets the client port property.
+     *
+     * @return the client port property.
+     */
+    public @NotNull SimpleIntegerProperty clientPortProperty() {
+        return clientPortProperty;
+    }
+
+    /**
+     * Gets the broker hostname property.
+     *
+     * @return the broker hostname property.
+     */
+    public @NotNull SimpleStringProperty brokerHostnameProperty() {
+        return brokerHostnameProperty;
+    }
+
+    /**
+     * Gets the broker port property.
+     *
+     * @return the broker port property.
+     */
+    public @NotNull SimpleIntegerProperty brokerPortProperty() {
+        return brokerPortProperty;
+    }
+
+    /**
+     * Gets the username property.
+     *
+     * @return the username property.
+     */
+    public @NotNull SimpleStringProperty usernameProperty() {
+        return usernameProperty;
+    }
+
+    /**
+     * Gets the password property.
+     *
+     * @return the password property.
+     */
+    public @NotNull SimpleStringProperty passwordProperty() {
+        return passwordProperty;
+    }
+
+    /**
+     * Gets the client identifier property.
+     *
+     * @return the client identifier property.
+     */
+    public @NotNull SimpleStringProperty clientIdentifierProperty() {
+        return clientIdentifierProperty;
+    }
+
+    /**
+     * Gets the subscriptions.
+     *
+     * @return the subscriptions.
+     */
+    public @NotNull List<MQTTSubscriptionConfig> subscriptionConfigs() {
+        return subscriptionConfigsProperty.get();
+    }
+
+    /**
+     * Gets the subscriptions property.
+     *
+     * @return the subscriptions property.
+     */
+    public @NotNull SimpleListProperty<MQTTSubscriptionConfig> subscriptionConfigsProperty() {
+        return subscriptionConfigsProperty;
+    }
+
+    /**
+     * Gets the parent property.
+     *
+     * @return the parent property.
+     */
+    public @NotNull SimpleObjectProperty<MQTTClientsConfig> parentProperty() {
+        return parentProperty;
     }
 
     /**
@@ -175,6 +336,10 @@ public class MQTTClientConfig {
         if (clientIdentifier() != null) {
             element.setAttribute(CLIENT_IDENTIFIER_ATTRIBUTE_NAME, clientIdentifier());
         }
+
+        // Creates all the subscription configurations.
+        subscriptionConfigs().forEach(mqttSubscriptionConfig ->
+                element.appendChild(mqttSubscriptionConfig.toElement(document)));
 
         return element;
     }
@@ -254,7 +419,7 @@ public class MQTTClientConfig {
         final @NotNull List<MQTTSubscriptionConfig> subscriptionConfigs = subscriptionConfigElements
                 .stream()
                 .map(MQTTSubscriptionConfig::fromElement)
-                .toList();
+                .collect(Collectors.toList());
 
         // Constructs the new mqtt client config.
         final var mqttClientConfig = new MQTTClientConfig(clientHostname, clientPort, brokerHostname, brokerPort, username, password,
@@ -265,5 +430,27 @@ public class MQTTClientConfig {
 
         // Returns the mqtt client config.
         return mqttClientConfig;
+    }
+
+    /**
+     * Gets the graphic for this config tree item.
+     *
+     * @return the graphic node.
+     */
+    @Override
+    public Node treeItemGraphic() {
+        return new ImageView(ConfiguratorImageCache.instance().read("icons/mqtt_client.png"));
+    }
+
+    /**
+     * Generates the text that's being used if this config element is put in a tree.
+     *
+     * @return the text.
+     */
+    @Override
+    public ObservableValue<String> treeItemText() {
+        return Bindings.createStringBinding(() -> clientHostname() + ":" + clientPort() + " to " + brokerHostname()
+                        + ":" + brokerPort(), clientHostnameProperty(), clientPortProperty(), brokerHostnameProperty(),
+                brokerPortProperty());
     }
 }
